--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
-name = dd_cli
-author = Luiz Paulo Souto Monteiro
-author_email = lpsmonteiro2@gmail.com
+name = defectdojo_cli2
+author = Mikke Schirén
+author_email = mikke.schiren@digitalist.com
 description = CLI Wrapper for DefectDojo using APIv2
 description-file = README.md
 description-content-type = text/markdown; charset=UTF-8
 project_urls =
-    Source Code = https://github.com/adiffpirate/defectdojo-cli
+    Source Code = https://github.com/Digitalist-Open-Cloud/defectdojo-cli
 license = MIT
 classifiers =
     Development Status :: 4 - Beta
@@ -15,8 +15,8 @@ classifiers =
     Operating System :: OS Independent
 
 [options]
-python_requires = >=3.6
+python_requires = >=3.12
 
 [entry_points]
 console_scripts =
-    defectdojo = defectdojo_cli.__main__:main
+    defectdojo = defectdojo_cli2.__main__:main
