--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,8 @@ name = defectdojo_cli2
 author = Mikke Schirén
 author_email = mikke.schiren@digitalist.com
 description = CLI Wrapper for DefectDojo using APIv2
-description_file = README.md
-description_content_type = text/markdown; charset=UTF-8
+long_description = README.md
+long_description_content_type = text/markdown
 project_urls =
     Source Code = https://github.com/Digitalist-Open-Cloud/defectdojo-cli
 license = MIT
