--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = defectdojo_cli2
 author = Mikke Schirén
 author_email = mikke.schiren@digitalist.com
 description = CLI Wrapper for DefectDojo using APIv2
-long_description = README.md
+long_description = file: README.md
 long_description_content_type = text/markdown
 project_urls =
     Source Code = https://github.com/Digitalist-Open-Cloud/defectdojo-cli
