--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,23 @@
-[build-system]
-requires = [
-    "setuptools>=42",
-    "wheel"
+[project]
+dependencies = ['requests', 'tabulate', 'rich-argparse']
+
+name = "defectdojo_cli2"
+version = "0.0.7"
+authors = [
+  { name="Mikke Schirén", email="mikke.schiren@digitalist.com" },
 ]
-build-backend = "setuptools.build_meta"
+description = "CLI Wrapper for DefectDojo using APIv2"
+readme = "README.md"
+requires-python = ">=3.12"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Programming Language :: Python :: 3 :: Only",
+    "License :: OSI Approved :: MIT License",
+    "Operating System :: OS Independent",
+]
+license = {file = "LICENSE"}
+[project.urls]
+Homepage = "https://github.com/Digitalist-Open-Cloud/defectdojo-cli"
+Issues = "https://github.com/Digitalist-Open-Cloud/defectdojo-cli/issues"
+[project.scripts]
+defectdojo = "defectdojo_cli2.__main__:main"
