--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,8 @@ Homepage = "https://github.com/Digitalist-Open-Cloud/defectdojo-cli"
 Issues = "https://github.com/Digitalist-Open-Cloud/defectdojo-cli/issues"
 [project.scripts]
 defectdojo = "defectdojo_cli2.__main__:main"
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+[tool.setuptools]
+packages = ["defectdojo_cli2"]
