--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "defectdojo-cli2"
-version = "0.1.1"
+version = "0.1.2"
 description = "CLI Wrapper for DefectDojo using APIv2"
 authors = ["Mikke Schirén <mikke.schiren@digitalist.com>"]
 license = "MIT"
@@ -12,6 +12,8 @@ requests = "^2.32.3"
 tabulate = "^0.9.0"
 rich-argparse = "^1.5.2"
 
+[tool.poetry.scripts]
+defectdojo = "defectdojo_cli2.__main__:main"
 
 [build-system]
 requires = ["poetry-core"]
